refactor: view객체의 상수 분리
* view객체인 OutputView와 InputView의 문자열 상수 분리